<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_favoritas"
        android:orderInCategory="1"
        android:icon="@mipmap/ic_favoritas"
        android:title="@string/action_favoritas"
        app:showAsAction="always" />

    <item
        android:id="@+id/mContacto"
        android:orderInCategory="2"
        android:title="@string/menu_contacto"
        >
    </item>

    <item
        android:id="@+id/mConfigurarCuenta"
        android:orderInCategory="3"
        android:title="@string/menu_configurar"
        >
    </item>

    <item
        android:id="@+id/mAcercaDe"
        android:orderInCategory="4"
        android:title="@string/menu_acercade"
        >
    </item>

    <item
        android:id="@+id/mRecibirNotificaciones"
        android:orderInCategory="4"
        android:title="@string/menu_recibir_notificaciones"
        >
    </item>

</menu>
